<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/hero_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/hero_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hero_title_label" />

            <EditText
                android:id="@+id/hero_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hero_title_hint" />

            <CheckBox
                android:id="@+id/hero_starred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hero_starred_label" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hero_argv1_label" />

    <EditText
        android:id="@+id/hero_argv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hero_argv1_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hero_argv2_label" />

    <EditText
        android:id="@+id/hero_argv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hero_argv2_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_liveness_label" />

        <TextView
            android:id="@+id/hero_liveness_value"
            android:layout_marginLeft="240dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_liveness_value_dummy"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/hero_liveness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_attack_label" />

        <TextView
            android:id="@+id/hero_attack_value"
            android:layout_marginLeft="240dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_attack_value_dummy"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/hero_attack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_affection_label" />

        <TextView
            android:id="@+id/hero_affection_value"
            android:layout_marginLeft="240dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_affection_value_dummy"/>

    </LinearLayout>



    <SeekBar
        android:id="@+id/hero_affection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button
        android:id="@+id/hero_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hero_report_text" />

</LinearLayout>